test/core/errors/syntax_error/zs/unexpected_eof_missing_semicolon_error.zs
package unexpected_eof_missing_semicolon_error;

struct UnexpectedEofMissingSemicolon
{
    int32 value;
}
